fix: replaces some broken styles

--- a/app/javascript/bundles/DungeonMasterCampaignManager/components/Widgets/widgets.module.scss
+++ b/app/javascript/bundles/DungeonMasterCampaignManager/components/Widgets/widgets.module.scss
@@ -1,9 +1,5 @@
 @import '../../stylesheets/variables';
 
-.widget {
-  overflow: auto;
-}
-
 .nameOptions {
   display: grid;
   grid-gap: $spacer;
@@ -16,3 +12,6 @@
   }
 }
 
+.buttonBar {
+  @include button-bar;
+}
