--- a/app/javascript/bundles/DungeonMasterCampaignManager/containers/page-container.module.scss
+++ b/app/javascript/bundles/DungeonMasterCampaignManager/containers/page-container.module.scss
@@ -6,6 +6,7 @@
   padding: 1rem 1rem 6.25rem 6rem;
   position: relative;
   width: 100%;
+  z-index: 200;
 
   @include respond-to(lg) {
     padding: 1rem 2rem 6rem 22rem;
@@ -20,7 +21,7 @@
     left: 0;
     position: absolute;
     width: 100%;
-    z-index: 0;
+    z-index: -1;
   }
 
   &.collapsed :global {
