--- a/app/javascript/bundles/DungeonMasterCampaignManager/stylesheets/_mixins.scss
+++ b/app/javascript/bundles/DungeonMasterCampaignManager/stylesheets/_mixins.scss
@@ -106,6 +106,27 @@
   margin-top: $top;
 }
 
+@mixin button-bar() {
+  @include font-size($font-size-lg);
+  background-color: $primary;
+  border-radius: $border-radius-lg;
+  box-shadow: $box-shadow;
+  color: $white;
+  display: block;
+  font-family: $font-family-mr-eaves;
+  padding: $spacer;
+  text-align: center;
+  transition: $transition-base;
+  width: 100%;
+
+  &:hover {
+    background-color: lighten($primary, 20%);
+    box-shadow: $box-shadow-sm;
+    color: $white;
+    text-decoration: none;
+  }
+}
+
 //@mixin card-heading {
 //  background: $panel-heading-bg;
 //  display: flex;
